<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pref_screen">

    <PreferenceCategory
        android:enabled="true"
        android:key="@string/pref_category_key_camera"
        android:title="@string/pref_category_title_camera">

        <ListPreference
            android:key="@string/pref_key_camerax_rear_camera_target_resolution"
            android:persistent="true"
            android:title="@string/pref_title_camerax_rear_camera_target_resolution" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_camera_live_viewport"
            android:persistent="true"
            android:summary="@string/pref_summary_camera_live_viewport"
            android:title="@string/pref_title_camera_live_viewport" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_info">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_info_hide"
            android:persistent="true"
            android:title="@string/pref_title_info_hide" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_pose_detection">
        <ListPreference
            android:defaultValue="@string/pref_entry_values_pose_detector_performance_mode_fast"
            android:entries="@array/pref_entries_values_pose_detector_performance_mode"
            android:entryValues="@array/pref_entry_values_pose_detector_performance_mode"
            android:key="@string/pref_key_live_preview_pose_detection_performance_mode"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/pref_title_pose_detector_performance_mode" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_pose_detector_prefer_gpu"
            android:persistent="true"
            android:summary="@string/pref_summary_pose_detector_prefer_gpu"
            android:title="@string/pref_title_pose_detector_prefer_gpu" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_live_preview_pose_detector_show_in_frame_likelihood"
            android:persistent="true"
            android:title="@string/pref_title_pose_detector_show_in_frame_likelihood" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_pose_detector_visualize_z"
            android:persistent="true"
            android:title="@string/pref_title_pose_detector_visualize_z" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_pose_detector_rescale_z"
            android:persistent="true"
            android:title="@string/pref_title_pose_detector_rescale_z" />
    </PreferenceCategory>
</PreferenceScreen>
