<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navChangeUser"
            android:onClick="selectMenuNavigation"
            android:title="@string/title_change_user" />

        <item
            android:id="@+id/navHelpers"
            android:onClick="selectMenuNavigation"
            android:title="@string/title_helpers" />

        <item
            android:id="@+id/clearDatabase"
            android:onClick="selectMenuNavigation"
            android:title="@string/desktop_clear_cache" />

        <!--Заказчик сказал скрыть настройки в меню-->
        <item
            android:id="@+id/navSettings"
            android:onClick="selectMenuNavigation"
            android:title="@string/setting_title"
            android:visible="false" />

    </group>
</menu>
