<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.inglass.android.presentation.auth_screens.splash.SplashFragment"
        android:label="@string/title_splash"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/navigation_desktop"
        android:name="com.inglass.android.presentation.main.desktop.DesktopFragment"
        android:label="@string/title_desktop"
        tools:layout="@layout/fragment_desktop">

        <action
            android:id="@+id/to_camerax"
            app:destination="@id/navigation_camera" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.inglass.android.presentation.auth_screens.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_navigation_login_to_navigation_registration_by_phone"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.inglass.android.presentation.auth_screens.settings.SettingsFragment"
        android:label="@string/setting_title"
        tools:layout="@layout/fragment_settings">

    </fragment>

    <dialog
        android:id="@+id/accessToSettingsDialog"
        android:name="com.inglass.android.presentation.dialogs.AccessToSettingsDialogFragment"
        android:label="@string/title_access_to_settings"
        tools:layout="@layout/dialog_access_to_settings" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.inglass.android.presentation.CameraXFragment"
        android:label="@string/desktop_scan_barcode"
        tools:layout="@layout/fragment_camerax">

        <argument
            android:name="operationId"
            app:argType="string" />

        <argument
            android:name="isMultiScan"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/navigation_helpers"
        android:name="com.inglass.android.presentation.helpers.HelpersFragment"
        android:label="@string/helpers_title"
        tools:layout="@layout/fragment_helpers">

        <action
            android:id="@+id/to_navigation_add_helpers_bs"
            app:destination="@id/addHelperBottomSheet" />

        <action
            android:id="@+id/to_navigation_add_participation_rate"
            app:destination="@id/addParticipationRateDialog" />

    </fragment>

    <dialog
        android:id="@+id/addParticipationRateDialog"
        android:name="com.inglass.android.presentation.dialogs.add_helper.AddParticipationRateDialogFragment"
        android:label="@string/add_helper_title"
        tools:layout="@layout/dialog_add_helper">

        <action
            android:id="@+id/to_navigation_helpers"
            app:destination="@id/navigation_helpers" />

        <argument
            android:name="employee"
            app:argType="com.inglass.android.presentation.dialogs.add_helper.EmployeeItemData" />

    </dialog>

    <dialog
        android:id="@+id/addHelperBottomSheet"
        android:name="com.inglass.android.presentation.dialogs.add_helper.AddHelperBottomSheetFragment"
        android:label="AddHelperBottomSheetDialogFragment"
        tools:layout="@layout/bottom_sheet_add_helper">

        <argument
            android:name="employees"
            app:argType="com.inglass.android.presentation.dialogs.add_helper.EmployeeItemData[]" />

    </dialog>

</navigation>
