<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="AddHelperBinding">

        <variable
            name="vm"
            type="com.inglass.android.presentation.dialogs.add_helper.AddHelperDialogVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        tools:ignore="SpUsage, ContentDescription">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="18dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/add_helper_title"
            android:textColor="@color/silver"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/employeesSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/bg_transpanent_text_view"
            android:includeFontPadding="true"
            android:spinnerMode="dropdown"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receiveNewsAndOffersTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/participationTextInputLayout"
            style="@style/DefaultTextInputLayout"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/participationTextInputEditText"
                style="@style/DefaultTextInputEditText"
                android:afterTextChanged="@{()->vm.checkFields()}"
                android:digits="0123456789."
                android:inputType="numberDecimal"
                android:text="@={vm.participation}"
                android:textColor="@color/main_black"
                android:textColorHint="@color/normal_gray"
                android:textSize="16dp"
                app:unfocusedHint="@{@string/helpers_participation}" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/participationChips"
            layout="@layout/layout_participation_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            app:vm="@{vm}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveMaterialButton"
            style="@style/RoundButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:enabled="@{vm.isSaveButtonEnable}"
            android:onClick="@{() -> vm.navigateToHelpers()}"
            android:text="@string/add_helper_save"
            app:backgroundTint="@drawable/bg_tint_pressed_main_black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelMaterialButton"
            style="@style/RoundButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="38dp"
            android:text="@string/add_helper_cancel"
            app:backgroundTint="@drawable/bg_tint_pressed_main_black" />
    </LinearLayout>
</layout>