<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="FragmentLoginBinding">

        <variable
            name="vm"
            type="com.inglass.android.presentation.auth_screens.login.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addressesConfirmRootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbarThumbVertical="@android:color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/parentConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:overScrollMode="never"
                android:paddingTop="?attr/actionBarSize"
                tools:context=".android.presentation.auth_screens.login.LoginFragment"
                tools:ignore="SpUsage">

                <View
                    android:id="@+id/appLogoView"
                    style="@style/LogoMobileService"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/loginTextView"
                    style="@style/TitleScreen"
                    android:text="@string/login_title_auth"
                    app:layout_constraintBottom_toTopOf="@id/phoneLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appLogoView"
                    tools:text="@string/login_title_auth" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneLayout"
                    style="@style/DefaultTextInputLayout"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="6dp"
                    app:layout_constraintBottom_toTopOf="@id/passTextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginTextView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passTextInputEditText1"
                        style="@style/DefaultTextInputEditText"
                        android:inputType="textPassword"
                        android:maxLength="40"
                        android:text="@={vm.login}"
                        android:textColor="@color/main_black"
                        android:textColorHint="@color/normal_gray"
                        android:textSize="16dp"
                        app:unfocusedHint="@{@string/login}"
                        tools:hint="Логин" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passTextInputLayout"
                    style="@style/DefaultTextInputLayout"
                    android:layout_marginHorizontal="18dp"
                    app:layout_constraintBottom_toTopOf="@id/errorTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneLayout"
                    app:passwordToggleDrawable="@drawable/ic_password_toggle"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/main_black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passTextInputEditText"
                        style="@style/DefaultTextInputEditText"
                        android:inputType="textPassword"
                        android:maxLength="40"
                        android:text="@={vm.password}"
                        android:textColor="@color/main_black"
                        android:textColorHint="@color/normal_gray"
                        android:textSize="16dp"
                        app:hasMediumWeightInput="@{true}"
                        app:unfocusedHint="@{@string/login_hint_pass}"
                        tools:hint="@string/login_hint_pass" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/errorTextView"
                    style="@style/ErrorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="0dp"
                    app:bindErrorWrapperText="@{vm.currentError}"
                    app:errorDisplayText="@{true}"
                    app:layout_constraintTop_toBottomOf="@id/passTextInputLayout"
                    app:visibility="@{vm.currentError.isThereError}"
                    tools:text="Ошибка" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/RoundButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> vm.onLoginClick()}"
                    android:text="@string/action_sign_in"
                    app:backgroundTint="@drawable/bg_tint_pressed_main_black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/errorTextView"
                    app:visibility="@{vm.loginButtonVisibility}"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registrationButton"
                    style="@style/RoundButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> vm.navToSettings()}"
                    android:text="@string/setting_title"
                    app:backgroundTint="@drawable/bg_tint_pressed_main_black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginButton" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibility="@{vm.showLoader}"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
